--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ./index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "chromedriver": "^89.0.0",
-    "selenium-webdriver": "^4.0.0-beta.1"
+    "play-sound": "^1.1.3",
+    "puppeteer": "^8.0.0"
   }
 }
