--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "node-notifier": "^9.0.1",
     "play-sound": "^1.1.3",
     "puppeteer": "^8.0.0"
   }
